@@ -86,6 +86,7 @@
 #cmakedefine01 ENABLE_ORIENTATION_EVENTS
 #cmakedefine01 ENABLE_PAGE_POPUP
 #cmakedefine01 ENABLE_PAGE_VISIBILITY_API
+#cmakedefine01 ENABLE_PERFORMANCE_TIMELINE
 #cmakedefine01 ENABLE_PLUGIN_PROXY_FOR_VIDEO
 #cmakedefine01 ENABLE_PROGRESS_ELEMENT
 #cmakedefine01 ENABLE_PROXIMITY_EVENTS
@@ -93,6 +94,7 @@
 #cmakedefine01 ENABLE_REPAINT_THROTTLING
 #cmakedefine01 ENABLE_REQUEST_ANIMATION_FRAME
 #cmakedefine01 ENABLE_RESOLUTION_MEDIA_QUERY
+#cmakedefine01 ENABLE_RESOURCE_TIMING
 #cmakedefine01 ENABLE_SCRIPTED_SPEECH
 #cmakedefine01 ENABLE_SHADOW_DOM
 #cmakedefine01 ENABLE_SHARED_WORKERS
@@ -108,6 +110,7 @@
 #cmakedefine01 ENABLE_TOUCH_EVENTS
 #cmakedefine01 ENABLE_TOUCH_SLIDER
 #cmakedefine01 ENABLE_TOUCH_ICON_LOADING
+#cmakedefine01 ENABLE_USER_TIMING
 #cmakedefine01 ENABLE_VIBRATION
 #cmakedefine01 ENABLE_VIDEO
 #cmakedefine01 ENABLE_VIDEO_TRACK
