@@ -1,3 +1,15 @@
+2013-01-18  Sudarsana Nagineni  <sudarsana.nagineni@intel.com>
+
+        [CMake] Fix CMake warnings
+        https://bugs.webkit.org/show_bug.cgi?id=107290
+
+        Reviewed by Laszlo Gombos.
+
+        Add missing WebKit options to CMake features list.
+
+        * Source/cmake/WebKitFeatures.cmake:
+        * Source/cmakeconfig.h.cmake:
+
 2013-01-18  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r140005.
